Adicionado tela de criação de eleição

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,3 +5,29 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.login-box {
+  width: 50%;
+  height: 180px;
+
+  position:absolute; /*it can be fixed too*/
+  left:0; right:0;
+  top:0; bottom:0;
+  margin:auto;
+}
+
+.example-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.example-container > * {
+  width: 100%;
+}
+
+
+.md-fab-bottom-right {
+  position: absolute;
+  right: -20px;
+  bottom: -20px;
+}
