--- a/src/app/components/eletction/eletction.component.html
+++ b/src/app/components/eletction/eletction.component.html
@@ -12,40 +12,37 @@
     <form [formGroup]="firstFormGroup" >
       <ng-template matStepLabel>Criação da Eleição</ng-template>
       <mat-form-field class="myGroupForm">
-        <input matInput placeholder="Nome abreviado" formControlName="firstCtrl" required>
+        <input matInput placeholder="Nome abreviado" formControlName="short_name" required>
       </mat-form-field>
       <mat-form-field class="myGroupForm">
-        <input matInput placeholder="Nome" formControlName="firstCtrl" required>
+        <input matInput placeholder="Nome" formControlName="name" required>
       </mat-form-field>
       <mat-form-field class="myGroupForm">
-        <textarea matInput placeholder="Descrição" formControlName="firstCtrl" required></textarea>
+        <textarea matInput placeholder="Descrição" formControlName="description" required></textarea>
       </mat-form-field>
       <mat-form-field class="myGroupForm">
-        <input matInput placeholder="Endereço de Email para Ajuda" formControlName="firstCtrl" required>
+        <input matInput placeholder="Endereço de Email para Ajuda" formControlName="help_email" required>
       </mat-form-field>
       <mat-form-field class="myGroupForm">
-        <input type="date" matInput placeholder="Votação começa em" formControlName="firstCtrl" required>
+        <input type="date" matInput placeholder="Votação começa em" formControlName="voting_starts_at" required>
       </mat-form-field>
       <mat-form-field class="myGroupForm">
-        <input type="date" matInput placeholder="Votação termina em" formControlName="firstCtrl" required>
+        <input type="date" matInput placeholder="Votação termina em" formControlName="voting_ends_at" required>
       </mat-form-field>
       <div class="myGroupForm">
-        <mat-checkbox formControlName="hideRequired" >Usar pseudônimo de eleitores</mat-checkbox>
+        <mat-checkbox formControlName="use_voter_aliases" >Usar pseudônimo de eleitores</mat-checkbox>
       </div>
       <div class="myGroupForm">
-        <mat-checkbox formControlName="hideRequired">Usar auditoria de cédulas</mat-checkbox>
+        <mat-checkbox formControlName="use_advanced_audit_features">Usar auditoria de cédulas</mat-checkbox>
       </div>
       <div class="myGroupForm">
-        <mat-checkbox formControlName="hideRequired">Tornar ordem das questões aleatória</mat-checkbox>
+        <mat-checkbox formControlName="randomize_answer_order">Tornar ordem das questões aleatória</mat-checkbox>
       </div>
       <div class="myGroupForm">
-        <mat-checkbox formControlName="hideRequired">Privada?</mat-checkbox>
-      </div>
-
-      <div>
+        <mat-checkbox formControlName="private_p">Privada?</mat-checkbox>
       </div>
     </form>
-    <button mat-button matStepperNext>Next</button>
+    <button mat-raised-button color="primary" matStepperNext class="bt-bottom-right" (click)="createElection()">Next</button>
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
