--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,15 +3,17 @@
 <mat-card-content>
   <div class="example-container">
 
-  <mat-form-field>
-    <input matInput placeholder="Usuário" [(ngModel)]="usuario">
+  <form [formGroup]="loginFormGroup">
+  <mat-form-field class="form-login">
+    <input matInput placeholder="Usuário" formControlName="username">
   </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="Senha" type="password" [(ngModel)]="senha">
+  <mat-form-field class="form-login">
+    <input matInput placeholder="Senha" type="password" formControlName="password">
   </mat-form-field>
 
-  <button mat-raised-button color="primary" (click)="logar()">Entrar</button>
+  <button mat-raised-button color="primary" type="submit" (click)="logar()" class="form-login">Entrar</button>
+  </form>
   </div>
 
 </mat-card-content>
