--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -82,3 +82,19 @@
   color: #8c8c8c;
   font-size: xx-large;
 }
+
+.electionBtn {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  padding: 18px;
+  text-decoration: none;
+  background-color: transparent;
+  color: white;
+  outline: none;
+}
+
+.electionActions{
+position: absolute;
+bottom: 0; right: 10px; left: 10px;
+padding: 20px;
+}
