Cabine de votação feita

--- a/src/app/components/eletction/eletction.component.html
+++ b/src/app/components/eletction/eletction.component.html
@@ -1,7 +1,7 @@
-<!-- {{electionFormGroup.value | json }}
+{{electionFormGroup.value | json }}
 <br />
 <br />
-{{trusteeFormGroup.value | json }} -->
+{{trusteeFormGroup.value | json }}
 <mat-horizontal-stepper [linear]="false" #stepper class="election-box">
   <mat-step [stepControl]="electionFormGroup" >
     <form [formGroup]="electionFormGroup" >
