--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -66,12 +66,13 @@
 
 .subtitle {
   position: absolute;
-  top: 38px;
+  left: 17px;
 }
 
 .end {
   position: absolute;
   left: 15px;
+  bottom: 20px;
 }
 
 .noneElection {
