Estrutura de questão modificado

--- a/src/app/components/booth/booth.component.html
+++ b/src/app/components/booth/booth.component.html
@@ -15,14 +15,16 @@
       <ng-template matStepLabel>Marcar</ng-template>
       <mat-radio-group formControlName="answer" >
         <h2 class="questionTitle">{{questions.question}}</h2>
-        <p *ngFor="let a of questions.answers; let i = index" [attr.data-index]="i">
-          <mat-radio-button value="{{questions.answers[i].answer}}">
-            {{questions.answers[i].answer}}
-          </mat-radio-button>
-          <a mat-icon-button href="{{questions.answer_urls[i].answer_urls}}" target="_blank">
-            <mat-icon aria-hidden="false">launch</mat-icon>
-          </a>
-        </p>
+        <div *ngFor="let q of questions">
+          <p *ngFor="let a of q.answers; let i = index" [attr.data-index]="i">
+            <mat-radio-button value="{{i}}">
+              {{q.answers[i]}}
+            </mat-radio-button>
+            <a mat-icon-button href="{{q.answer_urls[i]}}" target="_blank">
+              <mat-icon aria-hidden="false">launch</mat-icon>
+            </a>
+          </p>
+        </div>
       </mat-radio-group>
       <div>
         <button mat-button matStepperNext class="netxBtn">Next</button>
