--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,12 @@
+.loading {
+  width: 100px;
+  height: 100px;
+
+  position:absolute; /*it can be fixed too*/
+  left:0; right:0;
+  top:0; bottom:0;
+  margin:auto;
+}
 .example-icon {
   padding: 0 14px;
 }
